opam-version: "2.0"

name: "mine"
version: "1.0"
homepage: "https://github.com/dhcmrlchtdj/mine"
bug-reports: "https://github.com/dhcmrlchtdj/mine/issues"

authors: "h11"
maintainer: "nirisix@gmail.com"
dev-repo: "git+https://github.com/dhcmrlchtdj/mine"

depends: [
    "containers"
    "re"
    "ppx_deriving"
    "ocamlbuild" {build}
    "alcotest" {dev}
    "ocamlformat" {dev}
    "ocp-indent" {dev}
]

build: [
    [ "make" ]
]
