opam-version: "2.0"

version: "1.0"
name: "mine"
synopsis: "A markdown renderer in OCaml"
homepage: "https://github.com/dhcmrlchtdj/mine"
bug-reports: "https://github.com/dhcmrlchtdj/mine/issues"
license: "UNLICENSE"

authors: "h11 <nirisix@gmail.com>"
maintainer: "h11 <nirisix@gmail.com>"
dev-repo: "git+https://github.com/dhcmrlchtdj/mine"

depends: [
    "containers"
    "re"
    "ppx_deriving"
    "dune" {build}
    "alcotest" {dev}
    "ocamlformat" {dev}
]

build: [
    [ "make" "build" ]
]
