opam-version: "2.0"

version: "1.0.0"
name: "mine"
synopsis: "A markdown renderer in OCaml"
license: "UNLICENSE"
homepage: "https://github.com/dhcmrlchtdj/mine"
bug-reports: "https://github.com/dhcmrlchtdj/mine/issues"
dev-repo: "git+https://github.com/dhcmrlchtdj/mine"
authors: "h11 <nirisix@gmail.com>"
maintainer: "h11 <nirisix@gmail.com>"

depends: [
    "containers"
    "re"
    "js_of_ocaml" {build}
    "js_of_ocaml-compiler" {build}
    "js_of_ocaml-ppx" {build}
    "ppx_deriving" {build}
    "dune" {build}
    "alcotest" {dev}
    "ocamlformat" {dev}
]

build: [
    ["dune" "build" "@install" "-p" name "-j" jobs]
]
